--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "corepack": "^0.14.2",
+    "express": "^4.18.2",
     "nodemon": "^2.0.16",
     "npm": "^8.19.2"
   },
